@@ -2,7 +2,8 @@
  * File taken from glibc 2.9.
  * Following changes were made:
  *  - Added typedef __compar_fn_t and __compar_d_fn_t
- *  - #define'd __alloca and __mempcppy
+ *  - #define'd __alloca
+ *  - rearranged the __mempcpy using code
  *  - disabled _SC_PHYS_PAGES related code
  *  - disabled libc_hidden_def
  */
@@ -38,7 +39,6 @@
 typedef int (*__compar_fn_t) (__const void *, __const void *);
 typedef int (*__compar_d_fn_t) (__const void *, __const void *, void *);
 #define __alloca alloca
-#define __mempcpy(a, b, c) (char *)a + c, memcpy(a, b, c)
 
 struct msort_param
 {
@@ -155,13 +155,23 @@ msort_with_tmp (const struct msort_param *p, void *b, size_t n)
 	{
 	  if ((*cmp) (b1, b2, arg) <= 0)
 	    {
+#if 0
 	      tmp = (char *) __mempcpy (tmp, b1, s);
+#else
+	      memcpy (tmp, b1, s);
+	      tmp += s;
+#endif
 	      b1 += s;
 	      --n1;
 	    }
 	  else
 	    {
+#if 0
 	      tmp = (char *) __mempcpy (tmp, b2, s);
+#else
+	      memcpy (tmp, b2, s);
+	      tmp += s;
+#endif
 	      b2 += s;
 	      --n2;
 	    }
